option java_package = "com.google.pubsub.flic.common";
option java_outer_classname = "MessagePacketProto";

message MessagePacket {
  optional string topic = 1;
  optional string value = 2;
  optional string key = 3;
  optional int64 latency = 4;
  optional int64 receivedTime = 5;
}